feat: enhance signal handling and cleanup in entrypoint script

--- a/postgresql/Dockerfile
+++ b/postgresql/Dockerfile
@@ -24,4 +24,7 @@ RUN chmod +x /opt/setup.sh && \
 COPY entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
 
+# Set the stop signal for proper container shutdown
+STOPSIGNAL SIGTERM
+
 ENTRYPOINT ["/entrypoint.sh"]
