chore: janitor job and try rephrase certain prompt

--- a/docker/postgresql/Dockerfile
+++ b/docker/postgresql/Dockerfile
@@ -13,6 +13,7 @@ ARG PATRONI_VERSION=v3.0.2
 # Build metadata
 ARG BUILD_DATE
 ARG VCS_REF
+
 LABEL org.opencontainers.image.created=$BUILD_DATE \
       org.opencontainers.image.revision=$VCS_REF \
       org.opencontainers.image.title="PostgreSQL with Build Optimization" \
@@ -22,6 +23,7 @@ ENV PG_CONFIG=/usr/local/pgsql/bin/pg_config
 
 # Setup layer - copy stable files first for better caching
 FROM base AS setup
+
 # Copy setup scripts and configuration (stable files that change infrequently)
 COPY setup.sh /opt/setup.sh
 COPY setup/ /opt/setup/
@@ -34,7 +36,7 @@ RUN --mount=type=cache,target=/var/cache/apt \
     rm /opt/setup.sh && \
     rm -rf /opt/setup/
 
-ENV PATH="/usr/local/pgsql/bin:/opt/bats/bin:$PATH"
+ENV PATH="/usr/local/pgsql/bin:$PATH"
 
 # Runtime layer - copy volatile files later
 FROM setup AS runtime
@@ -43,36 +45,13 @@ FROM setup AS runtime
 # Copy entrypoint scripts (volatile files that change frequently during development)
 COPY entrypoint.d/ /opt/container/entrypoint.d/
 
-# Make all entrypoint scripts executable first
-RUN find /opt/container/entrypoint.d/ -name "*.sh" -exec chmod +x {} \;
-
-# Install BATS testing framework (depends on entrypoint scripts)
-# Temporarily disabled for faster builds - can be enabled when needed
-# RUN /opt/container/entrypoint.d/scripts/test/bats/install_bats.sh && \
-#     rm -rf /tmp/bats-*
-
-# Copy main entrypoint script
-COPY entrypoint.d/entrypoint.sh /entrypoint.sh
-RUN chmod +x /entrypoint.sh
-
 # Set proper ownership
 RUN chown -R postgres:postgres /opt/container/ && \
     chmod -R 755 /opt/container/
 
-# Create data directory with proper permissions
-RUN mkdir -p /var/lib/postgresql/data && \
-    chown -R postgres:postgres /var/lib/postgresql && \
-    chmod 700 /var/lib/postgresql/data
-
-# Environment variables for runtime configuration
-ENV POSTGRES_USER=postgres \
-    POSTGRES_DB=postgres \
-    PGDATA=/var/lib/postgresql/data \
-    POSTGRES_INITDB_ARGS="" \
-    POSTGRES_INITDB_WALDIR="" \
-    POSTGRES_HOST_AUTH_METHOD=trust \
-    USE_PATRONI=false \
-    LOG_LEVEL=INFO
+# Copy main entrypoint script
+COPY entrypoint.d/entrypoint.sh /entrypoint.sh
+RUN chmod +x /entrypoint.sh
 
 # Set the stop signal for proper container shutdown
 STOPSIGNAL SIGTERM
@@ -80,8 +59,6 @@ STOPSIGNAL SIGTERM
 # Health check configuration
 HEALTHCHECK --interval=30s --timeout=10s --start-period=60s --retries=3 \
     CMD /opt/container/entrypoint.d/scripts/runtime/healthcheck.sh || exit 1
-
-# Switch to postgres user for security (handled in entrypoint)
 
 # Expose PostgreSQL port
 EXPOSE 5432
